syntax = "proto3";

option go_package = "./balance";

service Balance {
    rpc GetBalance(AccountID) returns (BalanceResponse);
    rpc AuthorizeDebit(AuthorizeDebitRequest) returns (DebitResult);
    rpc CreditAccount(CreditRequest) returns (BalanceResponse);
}

message AccountID {
    string account_id = 1;
}

message BalanceResponse {
    string account_id = 1;
    int64 current_balance = 2; // amount in cents
}

message AuthorizeDebitRequest {
    string account_id = 1;
    int64 amount = 2; // amount in cents
}

message DebitResult {
    bool success = 1;
    string error_message = 2; // reason if not successful
    int64 new_balance = 3; // new balance if successful
}

message CreditRequest {
    string account_id = 1;
    int64 amount = 2; // amount in cents
}
